Added some css and js

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
 
-<head><title>C369</title></head>
+<head><title>C369</title>
+<style>
+
+    body{
+        color: red;
+    }
+
+</style>
+<script>
+alert("Hello!");
+</script>
+</head>
 
 <body>Hello world! C369
 
